Created Profile Model (Please make migrations )

--- a/website/shop/templates/shop/profile.html
+++ b/website/shop/templates/shop/profile.html
@@ -53,6 +53,17 @@
 
 <div class="text-center">
 <h1>Welcome to the Profile Page {{user}}!</h1>
+
+<br/>
+<br/>
+
+<h3>Upload Profile Image</h3>
+
+<br/>
+<br/>
+
+<img src="{{profile.image}}"/>
+
 </div>
 
 {% else %}
@@ -60,3 +71,4 @@
 <h3>Access Denied</h3>
 
 {% endif %}
+
