--- a/website/shop/templates/shop/index.html
+++ b/website/shop/templates/shop/index.html
@@ -17,7 +17,7 @@
  
  
     <link rel="stylesheet" href="{% static 'shop/style.css' %}">
-    <title>Document</title>
+    <title>E-commerce</title>
 </head>
 <body>
     <div class="container">
